Changes heights on pics for better symmetry.

--- a/startup_index.html
+++ b/startup_index.html
@@ -41,7 +41,7 @@
 					<div class="col-sm-6">
 						<h1>Android Development</h1>
 						<p>Our mobile development team can make a variety of mobile applications for android phones.</p>
-						<div class="thumbnail">
+						<div class="thumbnail" id="android-img">
 							<img src="https://raw.githubusercontent.com/derekmcavoy/cool-startup/master/pics/Android-logo.jpg" alt="Android Logo"/>
 						</div>
 					</div>
@@ -62,7 +62,7 @@
 						<h3>Social Media Applications</h3>
 						<p>We have experience in creating mobile applications based on social media purpose.</p>
 						<a href="#">Social media application examples</a>
-						<div class="thumbnail">
+						<div class="thumbnail" id="social-media-img">
 							<img src="https://raw.githubusercontent.com/derekmcavoy/cool-startup/master/pics/business-plan-social-media.jpg" alt="Social Media"/>
 						</div>
 					</div>
@@ -70,7 +70,7 @@
 						<h3>Mobile Games</h3>
 						<p>The market for mobile gaming is growing extremely fast. We also can develop Java based mobile games.</p>
 						<a href="#">Mobile gaming examples.</a>
-						<div class="thumbnail">
+						<div class="thumbnail" id="mobile-game-img">
 							<img src="https://raw.githubusercontent.com/derekmcavoy/cool-startup/master/pics/java-game-development.jpg" alt="Java Game Development"/>
 						</div>
 					</div>
