Fixed the problems mentioned in the comments to zurb foundation site.

--- a/zurb/startup_index_zurb.html
+++ b/zurb/startup_index_zurb.html
@@ -14,7 +14,7 @@
 	</head>
 	
 	<body>
-		<div class="top-bar">
+		<div class="top-bar" id="header">
 			<div class="top-bar-section">
 				<ul class="left">
 					<li><a href="#home">Home</a></li>
@@ -29,14 +29,12 @@
 				</ul>
 			</div>
 		</div>
-		<section id="homepage">
-			<div class="row fullWidth">
-				<div class="large-12 columns">
-					<h1>NH Development</h1>
-					<p>Proud to be developing local mobile applications.</p>
-				</div>
+		<div id="homepage">
+			<div class="full-width">
+				<h1>NH Development</h1>
+				<p>Proud to be developing local mobile applications.</p>
 			</div>
-		</section>
+		</div>
 		
 		<div class="android-development">
 				<div class="row">
