Added a conditional statement to my html page so it uses a stylesheet made specifically for IE version 9 or below users. Also added iestylesheet.css to my css folder.

--- a/normalize/index.html
+++ b/normalize/index.html
@@ -10,6 +10,12 @@
 		<!--My CSS stylesheet-->
 		<link rel="stylesheet" href="css/main.css"> 
 		
+		<!--[if lte IE 9]>
+			<link rel="stylesheet" href="css/iestylesheet.css">
+		<![endif]-->
+		
+		</script>
+		
 		<title>NH Development</title>
 	</head>
 	
